--- a/pages/labs/git/index.html
+++ b/pages/labs/git/index.html
@@ -7,7 +7,7 @@
 <li>Star the <a href="https://github.com/elmsln/haxcms">haxcms</a>
 , <a href="https://github.com/elmsln/wcfactory">wcfactory</a>
  and <a href="https://github.com/elmsln/lrnwebcomponents">LRNWebcomponents</a>
- repos, we will go back to the in the future and if you code you may be interested in them currently. (this is what we work on Wed, 9-12 at Starbucks on Calder if you want a deep dive in web development)</li>
+ repos, we will go back to in the future and if you code you may be interested in them currently. (this is what we work on Wed, 9-12 at Starbucks on Calder if you want a deep dive in web development)</li>
 <li>Our course is also powered by Git and on Github, so let's <a href="https://github.com/btopro/ist402">fork the repo backing this course</a>
 </li>
 <li>Go to <b>files/spring2020.md</b>
